Database scripts for questions, questions_parser that inserts them

--- a/src/notebooks/questions_parsing.ipynb
+++ b/src/notebooks/questions_parsing.ipynb
@@ -322,6 +322,37 @@
     "        print(question.childNodes[0].nodeValue)\n",
     "    print('----------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title        Het bericht 'Nederlands rijbewijs online te ko...\n",
+       "function     F.B.J. GrapperhausCDAMinister van Justitie en ...\n",
+       "keywords                                                   nan\n",
+       "questions    <questions><question>1 Heeft u kennisgenomen v...\n",
+       "Name: 36, dtype: object"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ministry_questions.loc[36]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
