--- a/src/notebooks/topic_modeling.ipynb
+++ b/src/notebooks/topic_modeling.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -45,51 +45,69 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>question</th>\n",
+       "      <th>title</th>\n",
+       "      <th>funtion</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>questions</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Kent u het onderzoek van CorporatieNL en USP M...</td>\n",
+       "      <td>De achteruitgang van leefbaarheid in wijken</td>\n",
+       "      <td>K.H. OllongrenD66Minister van Binnenlandse Zak...</td>\n",
+       "      <td>WONINGCORPORATIES#STADSWIJKEN#WOONOMSTANDIGHED...</td>\n",
+       "      <td>&lt;question&gt;1 Kent u het onderzoek van Corporati...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Wat zijn volgens u de oorzaken dat maar liefst...</td>\n",
+       "      <td>De brief van de president van De Nederlandsche...</td>\n",
+       "      <td>W. KoolmeesD66Minister van Sociale Zaken en We...</td>\n",
+       "      <td>DNB#PENSIOENEN#INDEXATIE# # #</td>\n",
+       "      <td>&lt;question&gt;1 Acht u het gewenst dat een nieuw p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Hoe verklaart u dat slechts 9% van de huurders...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bent u van mening dat gemeenten en woningcorpo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Kunt u alsnog antwoord geven op de vraag wat u...</td>\n",
+       "      <td>De hervestiging van zieke vluchtelingen</td>\n",
+       "      <td>M.G.J. HarbersVVDStaatssecretaris van Justitie...</td>\n",
+       "      <td>VLUCHTELINGEN#ZIEKTEN#JEUGDIGEN#ALLOCHTONE KIN...</td>\n",
+       "      <td>&lt;question&gt;1 Wat is uw reactie op de uitzending...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            question\n",
-       "0  Kent u het onderzoek van CorporatieNL en USP M...\n",
-       "1  Wat zijn volgens u de oorzaken dat maar liefst...\n",
-       "2  Hoe verklaart u dat slechts 9% van de huurders...\n",
-       "3  Bent u van mening dat gemeenten en woningcorpo...\n",
-       "4  Kunt u alsnog antwoord geven op de vraag wat u..."
+       "                                               title  \\\n",
+       "0      De achteruitgang van leefbaarheid in wijken     \n",
+       "1  De brief van de president van De Nederlandsche...   \n",
+       "2          De hervestiging van zieke vluchtelingen     \n",
+       "\n",
+       "                                             funtion  \\\n",
+       "0  K.H. OllongrenD66Minister van Binnenlandse Zak...   \n",
+       "1  W. KoolmeesD66Minister van Sociale Zaken en We...   \n",
+       "2  M.G.J. HarbersVVDStaatssecretaris van Justitie...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  WONINGCORPORATIES#STADSWIJKEN#WOONOMSTANDIGHED...   \n",
+       "1                      DNB#PENSIOENEN#INDEXATIE# # #   \n",
+       "2  VLUCHTELINGEN#ZIEKTEN#JEUGDIGEN#ALLOCHTONE KIN...   \n",
+       "\n",
+       "                                           questions  \n",
+       "0  <question>1 Kent u het onderzoek van Corporati...  \n",
+       "1  <question>1 Acht u het gewenst dat een nieuw p...  \n",
+       "2  <question>1 Wat is uw reactie op de uitzending...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "questions = pd.read_csv('../../data/questions.csv')\n",
-    "questions.head()"
+    "questions = pd.read_csv('../../data/question_data.csv', delimiter=';')\n",
+    "questions.head(3)\n",
+    "# questions.iloc[73]['questions']"
    ]
   },
   {
